v2.4.3
----------------------------------------------------------------------------------------------------
 * Removed the old mod_ssl interworking code. The module now requires a
   Apache httpd 2.4.48 or newer.
 * Fixed a potential null pointer dereference if ACME/OCSP server returned
   2xx responses without content type. Reported by chuangwen.

v2.4.2
----------------------------------------------------------------------------------------------------
 * This release needs at least Apache httpd 2.4.48 or later.
 * Fixed missing definitions when compiling against libressl. [Giovanni Bechis <giovanni@paclan.it>]
 * Making sure mod_md initializes after mod_watchdog, as otherwise jobs are not registered.
 * Adjusted test cases to work with mod_tls for OCSP stapling.
 * Implemented the new OCSP provisioning hooks in apache core.
 * Extended test suite to run also against mod_tls. Run
   ```SSL_MODULE=tls pytest``` to load an installed `mod_tls` into the server.
   Using `mod_ssl` is the default.
 * MDCertificateFile and MDCertificateKeyFile can now be specified several
   times to add multiple, static certificates to a MDomain.
 * pytest runs also from the top level directory.

v2.4.0
----------------------------------------------------------------------------------------------------
 * MDPrivateKeys allows the specification of several types. Beside "RSA" plus optional
   key lengths elliptic curves can be configured. This means you can have multiple
   certificates for a Managed Domain with different key types.
   With ```MDPrivateKeys secp384r1 rsa2048``` you get one ECDSA  and one RSA certificate
   and all modern client will use the shorter ECDSA, while older client will
   get the RSA certificate.
   Many thanks to @tlhackque who pushed and helped on this.
 * Support added for MDomains consisting of a wildcard. Configuring ```MDomain *.host.net```
   will match all virtual hosts matching that pattern and obtain one certificate for it