@@ -1,0 +1,47 @@
+[Fri Jul 16 07:56:01.483795 2021] [md:debug] [pid 25065] md_acme_drive.c(646): orlitzky.com: staging started, state=1, challenges='tls-alpn-01 http-01'
+[Fri Jul 16 07:56:01.483971 2021] [md:debug] [pid 25065] md_acme.c(752): get directory from https://acme-v02.api.letsencrypt.org/directory
+[Fri Jul 16 07:56:01.823926 2021] [md:trace1] [pid 25065] md_curl.c(404): request <-- 200
+[Fri Jul 16 07:56:01.823949 2021] [md:trace1] [pid 25065] md_acme.c(653): directory lookup response: 200
+[Fri Jul 16 07:56:01.824029 2021] [md:trace2] [pid 25065] md_acme.c(680): response: {\n  "6ywQujY6atw": "https://community.letsencrypt.org/t/adding-random-entries-to-the-directory/33417",\n  "keyChange": "https://acme-v02.api.letsencrypt.org/acme/key-change",\n  "meta": {\n    "caaIdentities": [\n      "letsencrypt.org"\n    ],\n    "termsOfService": "https://letsencrypt.org/documents/LE-SA-v1.2-November-15-2017.pdf",\n    "website": "https://letsencrypt.org"\n  },\n  "newAccount": "https://acme-v02.api.letsencrypt.org/acme/new-acct",\n  "newNonce": "https://acme-v02.api.letsencrypt.org/acme/new-nonce",\n  "newOrder": "https://acme-v02.api.letsencrypt.org/acme/new-order",\n  "revokeCert": "https://acme-v02.api.letsencrypt.org/acme/revoke-cert"\n}
+[Fri Jul 16 07:56:01.824101 2021] [md:debug] [pid 25065] md_acmev2_drive.c(98): orlitzky.com: (ACMEv2) need certificate
+[Fri Jul 16 07:56:01.824133 2021] [md:debug] [pid 25065] md_acme_drive.c(101): (2)No such file or directory: re-use account 'ACME-.letsencrypt.org-0000'
+[Fri Jul 16 07:56:01.827811 2021] [md:debug] [pid 25065] md_acme_acct.c(450): acct update
+[Fri Jul 16 07:56:01.827829 2021] [md:trace1] [pid 25065] md_acme.c(446): add acme POST: https://acme-v02.api.letsencrypt.org/acme/acct/130541434
+[Fri Jul 16 07:56:01.827842 2021] [md:debug] [pid 25065] md_acme.c(345): sending req: POST https://acme-v02.api.letsencrypt.org/acme/acct/130541434
+[Fri Jul 16 07:56:01.888398 2021] [md:trace1] [pid 25065] md_curl.c(404): request <-- 200
+[Fri Jul 16 07:56:01.888422 2021] [md:trace1] [pid 25065] md_acme.c(245): acme payload(len=0): 
+[Fri Jul 16 07:56:01.904169 2021] [md:trace2] [pid 25065] md_acme.c(398): req: POST https://acme-v02.api.letsencrypt.org/acme/acct/130541434, body:\n{\n  "protected": "eyJhbGciOiJSUzI1NiIsImtpZCI6Imh0dHBzOi8vYWNtZS12MDIuYXBpLmxldHNlbmNyeXB0Lm9yZy9hY21lL2FjY3QvMTMwNTQxNDM0Iiwibm9uY2UiOiIwMDAxbWpFMDExd3JiSndiSTZSazc1YXZ6VVkxUTZyS3lxd3Rld09YaGtpemtmWSIsInVybCI6Imh0dHBzOi8vYWNtZS12MDIuYXBpLmxldHNlbmNyeXB0Lm9yZy9hY21lL2FjY3QvMTMwNTQxNDM0In0",\n  "payload": "",\n  "signature": "N6ZNcgL_I3NJ0vFvY2kSLNqpmOK3sF1MaYQmSYZ3J2BHqk_HpHI487RXY8jV_mRcB9FqM9t58NBUyf_EbR93rvhi4H08euLvbr-2lNHGlPbx0SJGxIn5kB_onA7E9ImhbYK2nccwHcbky4oNWhqJ5Kym1gZVSZh_c4A_CE3A0vXfBxHGB_BwO7BIBIozqeQ4n6TL_qdrTWHHMzVKPmLaaeqg7BcSNmLkzA55CHDVRnYSgKLYpgR5pvZH2gjAo8eabGGzwtgdN6-NgF-Md1AaSHjUXl2ONA2i5XNlmfyRwNl1Txrr_roMQgZNM6KzSYF7rEGyBb0bWcFGf_vqgl2enO1hh-Uq7Q268ck07wYfnShfI3LjZkPNSeBA40TwgAdn0BFV43bGmXB0qct55zks540k1Y3JGw7fYD00J6bqneVOaf-g2udkpmReU2HKMWVQA0sir1EJ_oKZdQ02s2HBmcPzUU-RgOXkThdc8_1UEQGpHFNzIciYFYiTREUJKV_-"\n}
+[Fri Jul 16 07:56:01.980854 2021] [md:trace1] [pid 25065] md_curl.c(404): request <-- 200
+[Fri Jul 16 07:56:01.980876 2021] [md:trace1] [pid 25065] md_acme.c(282): response: 200
+[Fri Jul 16 07:56:01.980955 2021] [md:trace2] [pid 25065] md_acme.c(293): response: {\n  "key": {\n    "kty": "RSA",\n    "n": "qLtGcL_KfdHR29DkKiYBXBH3O63FSYje_D6AQghx9yXryMrax0Rn2jjQYE691vDobj1AEziafTo7uulT9WcHnfBd4gpGrUY1ntepouq1yc-3PGSisG-K-as51dVxZI6ZNM0NcJ8ozhNP5VFUI8Ae3DhwwcbcYk4g6wB2WnSO5IWhPYeJRJhNDQxIEkGA3e737id8p4yaGohDIWc6R7XV1_d6oHMUMk70a6AGu-kKHb9K3d_y1Rv3iQaBzEsw7gGZxVmGIJHk9kk-HT3GSxYdwOtsUhrypm30FQFDfE5C5Nwua7gDI6-QYdjQhUb_y0yqssIgYGyUzcIPAA3iW-Y5kLcmr_0Qlw2FUmnsAPTw--Ga-DwG-MefA5AS8BTblgTzqDnBBOw3XOMExW2xj7BysWv-pwysR4zDOfulh9Lhd87OSDUE1pijZDwDmdPQ7Jpl4YDZeIH9jcta9XJHPHikcbq1tD3kxsKjjaboiFnY-NbSDYOo1D_HBhEP0P-xbuSx",\n    "e": "AQAB"\n  },\n  "contact": [\n    "mailto:michael@orlitzky.com"\n  ],\n  "initialIp": "65.246.80.10",\n  "createdAt": "2021-07-14T10:55:18Z",\n  "status": "valid"\n}
+[Fri Jul 16 07:56:01.980984 2021] [md:debug] [pid 25065] md_acme_acct.c(442): updated acct https://acme-v02.api.letsencrypt.org/acme/acct/130541434
+[Fri Jul 16 07:56:01.981002 2021] [md:debug] [pid 25065] md_acme.c(421): req sent
+[Fri Jul 16 07:56:01.981077 2021] [md:trace1] [pid 25065] md_acme.c(469): add acme GET: https://acme-v02.api.letsencrypt.org/acme/order/130541434/11118290907
+[Fri Jul 16 07:56:01.981093 2021] [md:debug] [pid 25065] md_acme.c(345): sending req: GET https://acme-v02.api.letsencrypt.org/acme/order/130541434/11118290907
+[Fri Jul 16 07:56:01.981106 2021] [md:trace1] [pid 25065] md_acme.c(245): acme payload(len=0): 
+[Fri Jul 16 07:56:01.992920 2021] [md:trace2] [pid 25065] md_acme.c(398): req: POST https://acme-v02.api.letsencrypt.org/acme/order/130541434/11118290907, body:\n{\n  "protected": "eyJhbGciOiJSUzI1NiIsImtpZCI6Imh0dHBzOi8vYWNtZS12MDIuYXBpLmxldHNlbmNyeXB0Lm9yZy9hY21lL2FjY3QvMTMwNTQxNDM0Iiwibm9uY2UiOiIwMDAyNGZYMTh2Q3dQdVUzNkN1dUV6bmJqcmtmRHhvMUlVaUVFZlpacGFILV9tWSIsInVybCI6Imh0dHBzOi8vYWNtZS12MDIuYXBpLmxldHNlbmNyeXB0Lm9yZy9hY21lL29yZGVyLzEzMDU0MTQzNC8xMTExODI5MDkwNyJ9",\n  "payload": "",\n  "signature": "XWHPR-Yk73zIlWV1ZPcVJxGNJeocdGkMxLgfRvZ2OhgPmtfZQePKc23t3UgwSObWEsy_eaP4-jHzeER1rKtpOLe7WWdh_lKMCmADMpOTg2QC-Rjrg3ZiwxcFq-ecDIL7CDEfdzVYeo_c0bsanU8l1JBs1biHGkggtNnJQ2DgqYMC6OFSbAzV-_R0ti7cRStBEvXv_f_vrfxY6eNW7Avq7sd7MqiV_L9z7M1IKkUdwpmxfrOo50IrAXPfxdmRbGDd-LmljsvVymJAaxakdp2iVhjLKjhuC2YPh_bmxJ2I1WNr57HpnzokswB3-PsIeBWyutRPFcoBxmDgMdy9Do0O-CoqZZrHAkGrJ8IQxU9kj2dIodfoTuXW-iUuekggoPjMlXlO2XMaU5ms7fnD46l6BPwvjJg49djz-OoFARwTQMHtqNgWWMLV4AV5AUW2NDiamOoaBcQXGp03uclUcarEAY0vzVIpsyekn9mcHPFBWRGpUVqRgWl-Mw6kMQ8srXZd"\n}
+[Fri Jul 16 07:56:02.064778 2021] [md:trace1] [pid 25065] md_curl.c(404): request <-- 200
+[Fri Jul 16 07:56:02.064803 2021] [md:trace1] [pid 25065] md_acme.c(282): response: 200
+[Fri Jul 16 07:56:02.064869 2021] [md:trace2] [pid 25065] md_acme.c(293): response: {\n  "status": "pending",\n  "expires": "2021-07-23T11:48:37Z",\n  "identifiers": [\n    {\n      "type": "dns",\n      "value": "michael.orlitzky.com"\n    },\n    {\n      "type": "dns",\n      "value": "orlitzky.com"\n    }\n  ],\n  "authorizations": [\n    "https://acme-v02.api.letsencrypt.org/acme/authz-v3/14869394904",\n    "https://acme-v02.api.letsencrypt.org/acme/authz-v3/14869394905"\n  ],\n  "finalize": "https://acme-v02.api.letsencrypt.org/acme/finalize/130541434/11118290907"\n}
+[Fri Jul 16 07:56:02.064897 2021] [md:debug] [pid 25065] md_acme.c(421): req sent
+[Fri Jul 16 07:56:02.065576 2021] [md:debug] [pid 25065] md_acme_order.c(445): orlitzky.com: check AUTHZ at https://acme-v02.api.letsencrypt.org/acme/authz-v3/14869394904
+[Fri Jul 16 07:56:02.065596 2021] [md:trace1] [pid 25065] md_acme.c(469): add acme GET: https://acme-v02.api.letsencrypt.org/acme/authz-v3/14869394904
+[Fri Jul 16 07:56:02.065609 2021] [md:debug] [pid 25065] md_acme.c(345): sending req: GET https://acme-v02.api.letsencrypt.org/acme/authz-v3/14869394904
+[Fri Jul 16 07:56:02.065621 2021] [md:trace1] [pid 25065] md_acme.c(245): acme payload(len=0): 
+[Fri Jul 16 07:56:02.077453 2021] [md:trace2] [pid 25065] md_acme.c(398): req: POST https://acme-v02.api.letsencrypt.org/acme/authz-v3/14869394904, body:\n{\n  "protected": "eyJhbGciOiJSUzI1NiIsImtpZCI6Imh0dHBzOi8vYWNtZS12MDIuYXBpLmxldHNlbmNyeXB0Lm9yZy9hY21lL2FjY3QvMTMwNTQxNDM0Iiwibm9uY2UiOiIwMDAxZ21vV0ZWaFdIaXoxcHFSWWZvaGJveHNQb1pscGswTzRKY25QNTQ4QnlzbyIsInVybCI6Imh0dHBzOi8vYWNtZS12MDIuYXBpLmxldHNlbmNyeXB0Lm9yZy9hY21lL2F1dGh6LXYzLzE0ODY5Mzk0OTA0In0",\n  "payload": "",\n  "signature": "BgIVA53vFS7k-tt7_U_c72yN_tWaVHB5O6A1Ih8BaHWk96wqOw5M_0zp9ZMmV9xcI5A8VQIi_0Kt9_G5eMmhn8wjHIA-HJio4dmdgEg-PK3IXkxcDlbw1SeF4PUHKIrmv2gc0RE5CRskSNoYZ1-zulRQXWslhztizIXNgqc6XYyD6OSpJf1YyJSHkzc4PzE43JEw9Ugb0thto0fCw28OFq7J0KPIKR6ICRkJIOVOM0KiqV-x0EXAMy7vae2f1APHSrFf8TlS477B4y10AzZoo0wlUQTzE-YMU0HXNrq39h_6G5HBsLXNpCxZdxg7QVTjbIg3oTJEdl_Qv1_zeLsRyUKXjYhj-YtdXM4nnXe76ghYZbLMz96dsSKSK5EjsbUFXpvKPdWtVQiJircex8yqyxTKZuAX4N4RKFFzddhun2qmbflpWyg6s21ZBOyjfkodYrV6bIP9V5R1eCeQp00KbG-kDUpCgWnpSiqmHmQV5TnfztlVHCWeLTNGCoDrPfC0"\n}
+[Fri Jul 16 07:56:02.155782 2021] [md:trace1] [pid 25065] md_curl.c(404): request <-- 200
+[Fri Jul 16 07:56:02.155804 2021] [md:trace1] [pid 25065] md_acme.c(282): response: 200
+[Fri Jul 16 07:56:02.155899 2021] [md:trace2] [pid 25065] md_acme.c(293): response: {\n  "identifier": {\n    "type": "dns",\n    "value": "michael.orlitzky.com"\n  },\n  "status": "pending",\n  "expires": "2021-07-23T11:48:37Z",\n  "challenges": [\n    {\n      "type": "http-01",\n      "status": "pending",\n      "url": "https://acme-v02.api.letsencrypt.org/acme/chall-v3/14869394904/xgik4A",\n      "token": "v7AbaBD6KlSWbo_A478SIgtrfIApuWPZJWoTN141IE0"\n    },\n    {\n      "type": "dns-01",\n      "status": "pending",\n      "url": "https://acme-v02.api.letsencrypt.org/acme/chall-v3/14869394904/2VOa8A",\n      "token": "v7AbaBD6KlSWbo_A478SIgtrfIApuWPZJWoTN141IE0"\n    },\n    {\n      "type": "tls-alpn-01",\n      "status": "pending",\n      "url": "https://acme-v02.api.letsencrypt.org/acme/chall-v3/14869394904/Tgtvxw",\n      "token": "v7AbaBD6KlSWbo_A478SIgtrfIApuWPZJWoTN141IE0"\n    }\n  ]\n}
+[Fri Jul 16 07:56:02.155939 2021] [md:debug] [pid 25065] md_acme.c(421): req sent
+[Fri Jul 16 07:56:02.155982 2021] [md:debug] [pid 25065] md_acme_authz.c(164): ACME server authz: challenge 'pending' for michael.orlitzky.com at https://acme-v02.api.letsencrypt.org/acme/authz-v3/14869394904. Exact response was: {"identifier":{"type":"dns","value":"michael.orlitzky.com"},"status":"pending","expires":"2021-07-23T11:48:37Z","challenges":[{"type":"http-01","status":"pending","url":"https://acme-v02.api.letsencrypt.org/acme/chall-v3/14869394904/xgik4A","token":"v7AbaBD6KlSWbo_A478SIgtrfIApuWPZJWoTN141IE0"},{"type":"dns-01","status":"pending","url":"https://acme-v02.api.letsencrypt.org/acme/chall-v3/14869394904/2VOa8A","token":"v7AbaBD6KlSWbo_A478SIgtrfIApuWPZJWoTN141IE0"},{"type":"tls-alpn-01","status":"pending","url":"https://acme-v02.api.letsencrypt.org/acme/chall-v3/14869394904/Tgtvxw","token":"v7AbaBD6KlSWbo_A478SIgtrfIApuWPZJWoTN141IE0"}]}
+[Fri Jul 16 07:56:02.156013 2021] [md:debug] [pid 25065] md_acme_authz.c(311): (70023)This function has not been implemented on this platform: michael.orlitzky.com: protocol 'acme-tls/1' not enabled for this domain.
+[Fri Jul 16 07:56:02.156036 2021] [md:info] [pid 25065] (70023)This function has not been implemented on this platform: md[orlitzky.com] while[Setting up challenge 'tls-alpn-01' for domain michael.orlitzky.com] detail[error setting up challenge 'tls-alpn-01' for michael.orlitzky.com, for domain orlitzky.com, looking for other option]
+[Fri Jul 16 07:56:02.156061 2021] [md:error] [pid 25065] (22)Invalid argument: md[orlitzky.com] while[Setting up challenge 'tls-alpn-01' for domain michael.orlitzky.com] problem[challenge-mismatch] detail[None of offered challenge types for domain michael.orlitzky.com are supported. The server offered 'http-01 dns-01 tls-alpn-01' and available are: 'tls-alpn-01 http-01'.]
+[Fri Jul 16 07:56:02.156081 2021] [md:debug] [pid 25065] md_result.c(254): (22)Invalid argument: md[orlitzky.com] while[Setting up challenge 'tls-alpn-01' for domain michael.orlitzky.com] problem[challenge-mismatch] detail[None of offered challenge types for domain michael.orlitzky.com are supported. The server offered 'http-01 dns-01 tls-alpn-01' and available are: 'tls-alpn-01 http-01'.]
+[Fri Jul 16 07:56:02.156099 2021] [md:debug] [pid 25065] md_result.c(254): (22)Invalid argument: md[orlitzky.com] while[Setting up challenge 'tls-alpn-01' for domain michael.orlitzky.com] problem[challenge-mismatch] detail[None of offered challenge types for domain michael.orlitzky.com are supported. The server offered 'http-01 dns-01 tls-alpn-01' and available are: 'tls-alpn-01 http-01'.]
+[Fri Jul 16 07:56:02.156113 2021] [md:debug] [pid 25065] md_reg.c(1111): (22)Invalid argument: orlitzky.com: staging done
+[Fri Jul 16 07:56:02.157274 2021] [md:error] [pid 25065] (22)Invalid argument: AH10056: processing orlitzky.com: None of offered challenge types for domain michael.orlitzky.com are supported. The server offered 'http-01 dns-01 tls-alpn-01' and available are: 'tls-alpn-01 http-01'.
+[Fri Jul 16 07:56:02.157317 2021] [md:debug] [pid 25065] mod_md.c(177): AH10267: orlitzky.com: rate limiting notification about 'errored'
+[Fri Jul 16 07:56:02.157330 2021] [md:info] [pid 25065] AH10057: orlitzky.com: encountered error for the 2. time, next run in 13 seconds
+[Fri Jul 16 07:56:02.158411 2021] [md:trace1] [pid 25065] mod_md_drive.c(167): orlitzky.com: saving job props
+[Fri Jul 16 07:56:02.158430 2021] [md:debug] [pid 25065] mod_md_drive.c(228): AH10107: next run in 13 seconds
